--- a/redocly.yaml
+++ b/redocly.yaml
@@ -1,7 +1,7 @@
 # See https://redocly.com/docs/cli/configuration/ for more information.
 apis:
   sample@v1: 
-    root: openapi/openapi.yaml
+    root: apiSpecTest/apiSpecTest.yaml
 extends:
   - recommended
 rules:
@@ -18,5 +18,4 @@ theme:
         - lang: curl
         - lang: Node.js
         - lang: JavaScript
-        - lang: PHP
-        - lang: Python
+        - lang: Java8+Apache
