--- a/apiSpecTest/apiSpecTest.yaml
+++ b/apiSpecTest/apiSpecTest.yaml
@@ -10,7 +10,7 @@ info:
     name: Apache 2.0
     url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
   x-logo:
-    url: 'https://redocly.github.io/openapi-template/logo.png'
+    url: 'https://cdn.vox-cdn.com/thumbor/zXDwlBBFvXPzVvV4WRSUsigc4FY=/1400x1050/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/24458108/captain_pikachu.jpg'
   description:
     $ref: ./info-description.md
 tags:
@@ -20,6 +20,8 @@ tags:
     description: Operations about users.
   - name: Tag
     description: This is a tag description.
+  - name: mySampleGetRequest
+    description: this is a tag description.
 servers:
   - url: 'https://{tenant}/api/v1'
     variables:
@@ -36,6 +38,8 @@ paths:
     $ref: paths/path-item.yaml
   /pathItemWithExamples:
     $ref: paths/path-item-with-examples.yaml
+  /getRequestExample:
+    $ref: paths/myGetRequest.yaml
 components:
   securitySchemes:
     main_auth:
